--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,7 @@
-/* main.css: afable 2016 */
+/**
+ * @fileOverview Main css implementation of afable.github.io, 2016
+ * @author afablee@gmail.com, @superafable
+ */
 
 /* bkg color during transitions */
 body {
