--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,5 @@
 /**
- * @fileOverview Main css implementation of afable.github.io, 2016
- * @author afablee@gmail.com, @superafable
+ * @author afablee@gmail.com, 2020
  */
 
 /* bkg color during transitions */
